--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,5 @@
 MONGODB_URI=mongodb+srv://milan13x13:milan123@cluster0.dvaqo8y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=NOTE-ORGANIZER
 PORT=3000
+JWT_TOKEN_SECRET=milanmohapatradrdoscientestb
+JWT_TOKEN_EXPIRES_IN_SEC=3600
